# NKVME_FADC400

./: CMakeLists.txt  README  README.md  daq_gui.py  hv_control.py  install.sh  offline_charge.cpp  offline_compton_edge.cpp  offline_spe.cpp  setup.sh
config/: ch1.config  ch2.config  ch8.config
display/: CMakeLists.txt
display/include/: MonitorLinkDef.h  OnlineMonitor.hh
display/src/: OnlineMonitor.cc
frontend/: CMakeLists.txt
frontend/include/: ConfigParser.hh  ELog.hh  ThreadSafeQueue.hh  production.hh
frontend/src/: ConfigParser.cc  ELog.cc  frontend.cc  production.cc
gui/: config_manager.py  daq_gui.py  daq_widgets.py  elog_manager.py  hv_control.py  path_controller.py  prod_manager.py  tlu_simulator.py
nfadc400/: notice_env.sh
nfadc400/src/6uvme/6uvme/: Makefile  Notice6UVME.c  Notice6UVME.h
nfadc400/src/6uvme/6uvmeroot/: LinkDef.h  Makefile  Notice6UVMEROOT.cc  Notice6UVMEROOT.h
nfadc400/src/display/display/: Makefile  NoticeDISPLAY.c  NoticeDISPLAY.h
nfadc400/src/display/displayroot/: LinkDef.h  Makefile  NoticeDISPLAYROOT.cc  NoticeDISPLAYROOT.h
nfadc400/src/nfadc400/nfadc400/: Makefile  NoticeNFADC400.c  NoticeNFADC400.h
nfadc400/src/nfadc400/nfadc400root/: LinkDef.h  Makefile  NoticeNFADC400ROOT.cc  NoticeNFADC400ROOT.h
nfadc400/test/display/: Makefile  test_display.c
nfadc400/test/nfadc400/: nfadc400_anal.C  nfadc400_test.C  nfadc400_test.h
notice_vme_nfadc400/: notice_env.sh
notice_vme_nfadc400/driver/: 99-nkusbvme.rules  Makefile  modules.order  nkusbvme.c  nkusbvme.ko  nkusbvme.mod  nkusbvme.mod.c
notice_vme_nfadc400/programmer/nfadc400/: Makefile  nfadc400_update  updateNFADC400.c  updateNFADC400.h
notice_vme_nfadc400/programmer/nk6uvme/: Actions.cpp  Actions.h  Device.cpp  Device.h  Makefile  Option.cpp  Option.h  Programmer.cpp  nk6uvme  pvmex.cpp  pvmex.h
notice_vme_nfadc400/src/6uvme/: G__Notice6UVME.cxx  G__Notice6UVME_rdict.pcm  LinkDef.h  Makefile_c  Makefile_cpp  Makefile_root  Notice6UVME.c  Notice6UVME.h
notice_vme_nfadc400/src/linux_interface/: Makefile_c  NKUSBVME_Linux.c  NKUSBVME_Linux.h
notice_vme_nfadc400/src/nfadc400/: G__NoticeNFADC400.cxx  G__NoticeNFADC400_rdict.pcm  LinkDef.h  Makefile_c  Makefile_cpp  Makefile_root  NoticeNFADC400.c  NoticeNFADC400.h
objects/: CMakeLists.txt
objects/include/: FadcBD.hh  LinkDef.h  Pmt.hh  RawChannel.hh  RawData.hh  Run.hh  RunInfo.hh
objects/src/: FadcBD.cc  Pmt.cc  RawChannel.cc  RawData.cc  Run.cc  RunInfo.cc
rules/: 99-nkusbvme.rules  setup_usb.sh
test/nfadc400/: Makefile  nfadc400_test  nfadc400_test.cc  nfadc400_test.h
vme_fadc400_wrapping/: build_notice_api.sh  daq_env.sh
vme_fadc400_wrapping/configs/: daq.config  test.config
vme_fadc400_wrapping/frontend/: ELog.cc  ELog.hh  Makefile  frontend  frontend.cc  frontend.hh  production.cc  production.hh  production_nfadc400
vme_fadc400_wrapping/objects/: Makefile
vme_fadc400_wrapping/objects/include/: FadcBD.hh  LinkDef.h  Pmt.hh  RawChannel.hh  RawData.hh  Run.hh  RunInfo.hh
vme_fadc400_wrapping/objects/lib/: objectsDict_rdict.pcm
vme_fadc400_wrapping/objects/src/: FadcBD.cc  Pmt.cc  RawChannel.cc  RawData.cc  Run.cc  RunInfo.cc
vme_fadc400_wrapping/objects/tmp/: objectsDict.cxx
